# red_lab_hack_etna

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
etna_anomaly_detector/: main.py  metrics_collection.py
etna_anomaly_detector/detectors/: iqr.py  isolation_forest.py  utils.py
